--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         border: 1px solid red;
         height: 100vh;
         display: grid;
+        grid-template-rows: repeat(9, 1fr);
       }
       .container > * {
         word-break: break-word;
