--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Test test</p>
         <p>Test test</p>
         <p>Test test</p>
-        <p>Test test</p>
+        <p>Test asdsadsadasdsadasd asdasdasdsatesassssssssssssst</p>
         <p>Test test</p>
         <p>Test test</p>
         <p>Test test</p>
@@ -90,7 +90,8 @@
       }
       .container > * {
         word-break: break-word;
-        overflow-x: scroll;
+        overflow-y: scroll;
+        overflow-x: hidden;
       }
       .test {
         border: 1px solid black;
