--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         word-break: break-word;
         overflow-y: scroll;
         overflow-x: hidden;
+        padding: 5px;
       }
       .test {
         border: 1px solid black;
